Combobox: overlay position not aligned correctly (#1061)

--- a/src/less/combobox/base/combobox.less
+++ b/src/less/combobox/base/combobox.less
@@ -98,6 +98,8 @@ span.combobox {
     font-family: inherit;
     font-size: inherit;
     height: @combobox-input-height;
+    margin-left: 0;
+    margin-right: 0;
     padding: @combobox-input-padding;
     text-align: left;
 
